# starship

./: .gitignore  CMakeLists.txt  README  comp  docs.conf  line_counter
.github/workflows/: cmake.yml
src/: main.cpp
src/astgen/: astgen.hpp
src/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/link/: codegen.cpp  codegen.hpp
src/parser/: parser.cpp  parser.hpp
src/util/: globals.cpp  globals.hpp
test/: goal.ll  main  main.rk  output.ll  starship
